# Vehicle-Software-Simulator

./: .gitignore  LICENSE  README.md
vehicle-software-simulator/: .env  requirements.txt
vehicle-software-simulator/configs/: signals.json
vehicle-software-simulator/dashboard/: index.html
vehicle-software-simulator/docs/: README.md  architecture.md  golden_demo_scenario.md
vehicle-software-simulator/ecu/door_ecu/: door_ecu.py
vehicle-software-simulator/ecu/infotainment_ecu/: infotainment_ecu.py
vehicle-software-simulator/ecu/speed_ecu/: speed_ecu.py
vehicle-software-simulator/ecu/temperature_ecu/: temperature_ecu.py
vehicle-software-simulator/gateway/: api_server.py  can_listener.py  can_logger.py  message_decoder.py  signal_database.py  vehicle_gateway.py  vehicle_state.py  ws_server.py
vehicle-software-simulator/ivi/: CMakeLists.txt
vehicle-software-simulator/ivi/qml/: MainView.qml  qml.qrc
vehicle-software-simulator/ivi/src/: GatewayClient.cpp  GatewayClient.h  VehicleStateModel.cpp  VehicleStateModel.h  main.cpp
vehicle-software-simulator/logs/: vehicle_can.jsonl
vehicle-software-simulator/scripts/: start_simulation.sh  verify_telemetry_contract.py
vehicle-software-simulator/testing/helpers/: assertions.py  process_runner.py  ws_probe.py
vehicle-software-simulator/testing/integration/: test_golden_demo.py
